feat: add app context and provider for navigation state management
- Created appContext.jsx to manage navigation state with a context provider.
- Added useAppContext custom hook for easy access to context values.

style: implement HomePage styles

- Created HomePage.module.css for layout styling of the home page.

feat: create Header component

- Developed Header.jsx to structure the header with profile integration.
- Added Header.module.css for styling the header layout.

feat: add Navigation component

- Implemented a basic Navigation component for future navigation links.

feat: create Profile component

- Developed Profile.jsx to display user profile picture.
- Added Profile.module.css for styling the profile component.

--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,13 @@
   box-sizing: border-box;
 }
 
-html,
-body {
+html {
   height: 100%;
   font-family: sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 62.5%;
 }
 
 img,
@@ -40,4 +40,23 @@ a {
 ul,
 ol {
   list-style: none;
+}
+
+.body {
+  display: flex;
+  justify-content: center;
+  padding: 4rem;
+  align-items: center;
+  font-size: 1.6rem;
+  height: 100vh;
+  background-color: #f1e9f5;
+}
+
+.main-container {
+  width: 100%;
+  height: 100%;
+  border-radius: 3.5rem;
+
+  background-color: #fff;
+  overflow-x: hidden;
 }
