--- a/src/ui/Header.module.css
+++ b/src/ui/Header.module.css
@@ -6,6 +6,10 @@
 
 .div1 {
   grid-column: span 2 / span 2;
+
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
 }
 
 .div2 {
@@ -15,5 +19,8 @@
 
 .div3 {
   grid-column-start: 10;
-  text-align: right;
+
+  display: flex;
+  align-items: center;
+  justify-content: end;
 }
