--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -7,3 +7,22 @@
   display: flex;
   flex-direction: column;
 }
+
+.mainContentContainer {
+  width: 100%;
+  height: 100%;
+}
+
+.mainContent {
+  display: inline-block;
+
+  width: 70%;
+  height: 100%;
+
+  margin-left: -20%;
+  transition: margin-left 0.3s ease-in-out;
+}
+
+.mainContent.shifted {
+  margin-left: 1%; /* same as sidebar width */
+}
